--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,6 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# nyc test coverage
-.nyc_output
-
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
 # node-waf configuration
 .lock-wscript
 
@@ -37,3 +31,4 @@ jspm_packages
 .node_repl_history
 
 .DS_Store
+results.json
