--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ingests multiple JSON schemas into one schema, by resolving $ref property data. Will ingest absolute  and relative references",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine-node ./ --color"
+    "test": "jasmine-node ./ --color",
+    "cover": "istanbul cover jasmine-node -- ."
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
   },
   "homepage": "https://github.com/kenobi-media/ngest#readme",
   "devDependencies": {
+    "istanbul": "0.4.5",
     "jasmine-node": "1.14.5"
   }
 }
